# StudyBuddy

./: Cargo.toml
jwt/: Cargo.toml
jwt/src/: error.rs  lib.rs
src/: main.rs
src/db/: database.rs  error.rs  errors.rs
src/endpoints/: auth.rs  users.rs
src/jwt/: jwt.rs  mod.rs
src/models/: auth.rs  users.rs
src/services/: email.rs
