[package]
name = "API"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
validator = { version = "0.18.1", features = ["derive"] }
surrealdb = "1.5.4"
#jwt = { path = "jwt" }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0.63"
uuid = "1.10.0"
bcrypt = "0.15.1"
lettre = { version = "0.11.7", features = ["smtp-transport", "builder"] }